Upgraded key js libs
- Underscore 1.5.1
- Backbone 1.0.0
- jQuery 2.0.0
- Marionette 1.0.4

--- a/psiturk/templates_dashboard/dashboard.html
+++ b/psiturk/templates_dashboard/dashboard.html
@@ -7,29 +7,9 @@
     <link href="static_dashboard/css/inspiritas.css" rel="stylesheet">
     <link href="static_dashboard/css/backbone.tableview.css" rel="stylesheet">
     <link rel="stylesheet" href="static_dashboard/css/font-awesome.css">
+    <link href="static_dashboard/css/dashboard.css" rel="stylesheet">
 </head>
 <body>
-
-<!-- If more css overrides are added, this should be moved to a separate file. -->
-<style type="text/css" media="screen">
-  .dropdown-menu li > a:hover, .dropdown-menu li > a:focus, .dropdown-submenu:hover > a:focus {
-    background-color: #E66F37;
-    background-image: none;
-    filter: none;
-  }
-  .nav-tabs > .active > a, .nav-tabs > .active > a:hover {
-    color: #E66F37;
-    cursor: arrow;
-  }
-  .nav-tabs > li > a {
-    color: grey;
-    cursor: default;
-  }
-  .nav-tabs > li {
-    color: grey;
-    cursor: default;
-  }
-</style>
 
 
 <!-- Navbar
@@ -107,8 +87,6 @@
     <button id="shutdownServerBtn" class="btn btn-danger">Shutdown</button>
   </div>
 </div>
-
-
 
 
 <div id="aws-info-modal" class="modal hide" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -218,4 +196,3 @@
 
 </body>
 </html>
-
