--- a/psiturk/templates_example/error.html
+++ b/psiturk/templates_example/error.html
@@ -1,21 +1,21 @@
 <!doctype html>
 <html>
-	<head>
-		<title>Error</title>
-	</head>
+    <head>
+        <title>Error</title>
+    </head>
 <body >
     {% if errornum == 1008 %}
-    	<h2> 
-    	    <p>Sorry, our records indicate that you have attempted to complete this hit, but quit before finishing.<p>
-    	</h2>        
-    	    <p>Because this is a Psychology experiment, you can only complete this hit once.</p>
-    	    <p>Please release the hit so someone else can perform the experiment.</p>
+        <h2> 
+            <p>Sorry, our records indicate that you have attempted to complete this hit, but quit before finishing.<p>
+        </h2>        
+            <p>Because this is a Psychology experiment, you can only complete this hit once.</p>
+            <p>Please release the hit so someone else can perform the experiment.</p>
     {% elif errornum == 1010 %}
-    	<h2> 
-    	    <p>Sorry, our records indicate that you have already completed (or attempted to complete) this hit.<p>
-    	</h2>        
-    	    <p>Because this is a Psychology experiment, you can only complete this hit once.</p>
-    	    <p>Please release the hit so someone else can perform the experiment.</p>
+        <h2> 
+            <p>Sorry, our records indicate that you have already completed (or attempted to complete) this hit.<p>
+        </h2>        
+            <p>Because this is a Psychology experiment, you can only complete this hit once.</p>
+            <p>Please release the hit so someone else can perform the experiment.</p>
     {% elif errornum == 1014 %}
         <h2>
             Unsupported Browser: Internet Explorer
@@ -26,25 +26,32 @@
             standards-compliant browser such as 
             <a href="http://www.mozilla.org/firefox">Firefox</a> or 
             <a href="http://google.com/chrome">Google Chrome</a>.</p>
+    {% elif errornum == 1015 %}
+        <h2>
+            Experimenter error:  Experiment server unreachable
+        </h2>
+            <p>Sorry, the experiment server is currently unreachable.  Please
+                contact the requester to let them know that their server is offline!
+            </p>
     {% else %}
-    	<h2> 
-    	    <p>Sorry, there was an unexpected error in our processing of your hit.<p> 
-    	</h2>
+        <h2> 
+            <p>Sorry, there was an unexpected error in our processing of your hit.<p> 
+        </h2>
     {% endif %}
 
             <p>If you would like to receive partial compensation or feel you
             have reached this page in error, please email
-    	    <a href="mailto:gureckislab@gmail.com">gureckislab@gmail.com</a>
-    	    and send the following information:</p>
-	    <p>
+            <a href="mailto:gureckislab@gmail.com">gureckislab@gmail.com</a>
+            and send the following information:</p>
+        <p>
             Error: #{{ errornum }}<br>
             {% if hitId %} HitID: #{{ hitId }}<br> {% endif %}
             {% if assignId %}AssignId: #{{ assignId }}<br> {% endif %}
             {% if workerId %} WorkerId: #{{ workerId }}<br> {% endif %}
-	    </p>
-	    <h2>
-	    <p>Our sincere apologies!</p>
-	    </h2>
+        </p>
+        <h2>
+        <p>Our sincere apologies!</p>
+        </h2>
 
 </body>
 </html>
